web/src/scss/main.scss
//imports
@import url('../fonts/style/stylesheet.css');

//estrutura

//cores
$blue: #00808f;
$blue2: #006371;
$white: #fff;
$black: #000;
$red: #d9272d;
$yellow: #f2ba45;
$green: #73c495;
$gray: #666;

//mixins


//general
*,
*:after,
*:before {
	padding: 0;
	margin: 0;

	-webkit-box-sizing: border-box;
	  -moz-box-sizing: border-box;
		-o-box-sizing: border-box;
		  box-sizing: border-box;
}
.clearfix { zoom: 1; }
.clearfix:after {
	content: '';
	display: block;
	width: 100%;
	clear: both;
}
.left { float: left; }
.right { float: right; }
html,
body { 
	min-height: 100%;
	height: 100%;
}
body { 
	color: $gray;
	font-family: 'aller_lightregular';
}
h1 { text-transform: uppercase; }
.text { 
	line-height: 1.5;
	font-size: 1.5em;

	h1 { 
		margin-bottom: 3.8%;
		font-weight: normal;
	}

	p { margin: 10px 0 30px; }
}

//estrutura
.wrapper { 
	width: 76.4%; 
	position: relative;
}
.pad { 
	height: 100%;
	position:relative;
	padding-top: 4.7%;
}
.auto { margin: auto; }

//text-align
.ta-center { text-align: center; }
.ta-right { text-align: right; }
.ta-left { text-align: left; }

.arrow {
	width: 62px;
	height: 33px;
	display: block;
	left: 0;
	right: 0;
	bottom: 6%;
	position: absolute;
	cursor: pointer;
}
.arrow-h {
	width: 34px;
	height: 61px;
	top: 0;
	bottom: 0;
	display: block;
	position: absolute;
	cursor: pointer;
}

//colors
.blue { color: $blue; }
.white { color: $white; }
.black { color: $black; }
.red { color: $red; }
.yellow { color: $yellow; }

//fonts
.light { font-family: 'aller_lightregular'; }
.reg { font-family: 'allerregular'; }
.bold { font-family: 'allerbold'; }

//sprite
.sprite {
	background-image: url('../images/sprite/spritesheet.png');
	background-repeat: no-repeat;
	text-indent: -9999px;
}
.no-text-indent { text-indent: 0; }

header {
	background-color: $blue;
	padding: 1.3% 3.8%;
	position: fixed!important;
	width: 100%;
	top: 0;
	left: 0;
	z-index: 100;

	.pixie a {
		background-position: -7px -600px;
		background-size: cover;
		width: 225px;
		height: 35px;
		display: inline-block;
	}

	.menu li {
		display: inline-block;
		text-transform: uppercase;
		font-size: 1.25em;
		margin: 10px 15px 0;

		a {
			color: $white;
			text-decoration: none;
		}
	}
}

#era-uma-vez  {
	.pixie { 
		padding: 6.02% 0;
		display: block;
		width: 21%;

		img { max-width: 100%; }
	}

	.text { 
		width: 920px;
	}
	
	.arrow { background-position: -210px -895px; }
}

#proposta {
	background-color: $blue;

	.wrapper {
		width: 58%;
	

		.text {
			width: 48%;
			padding-top: 15%;
			color: #fff;
			margin-left: 19%;

			p {
				font-size: .8em;
			}
		}
	}

	.arrow { background-position: -210px -938px; }

	.pixies {
		position: relative;
		width: 39%;
		top: 0;
		right: 30px;

		span {
			width: 23.2%;
			position: static;

			img { max-width: 100%; }
		}

		.pixie-1 { 
			width: 34.7%;
			margin-bottom: 10px;
		}
		.pixie-2 { 
			clear: left;
			margin-left: 5.7%;
			margin-bottom: 10px;
			margin-right: 10px;
		}
		.pixie-3 { 
			clear: right;
		}
		.pixie-4 { 
			clear: left;
			margin-left: 31%;
			margin-right: 2%;
		}
		.pixie-5 { 
			clear: right;
			margin-bottom: 10px;
		}
		.pixie-6 { 
			clear: right;
			margin-right: 20.5%;
		}
	}
}

#descubra {
	background-color: $yellow;
	
	.wrapper {
		width: 58%;

		.text {
			padding-top: 244px;
			color: $white;
			width: 46%;
			margin-right: 14%;

			h1 { font-size: 24px; }

			p {
				font-size: .8em;
			}
		}
	}

	.slider {
		width: 60%;
		margin-right: 14%;
		position: relative;

		.ar-l {
			background-position: -210px -981px;
			left: -19%;
		}
		.ar-r {
			background-position: -254px -981px;
			right: -15%;
		}


		img { max-width: 100%; }
	}

	.pixies {
		width: 39%;
		position: relative;
		margin-top: 4%;

		span {
			position: static;
			width: 23.2%;

			img { max-width: 100%; }
		}

		.pixie-1 { 
			width: 34.7%;
			margin-bottom: 10px;
		 }
		.pixie-2 { 
			clear: right;
			margin-right: 5.4%;
			margin-left: 2%;
		 }
		.pixie-3 { 
			clear: left;
			margin-bottom: 2%;
		 }
		.pixie-4 { 
			clear: right;
			margin-right: 30.5%;
			margin-left: 2%;
			margin-bottom: 2%;
		 }
		.pixie-5 { 
			clear: left;
		 }
		.pixie-6 {
			clear: right;
			margin-left: 46.1%;
		 }
	}
}

#etapas {
	background-color: $red;
	text-align: center;
	height: 60%;

	.stage {
		width: 25%;
		font-size: 1em;
		display: inline-block;
		color: $white;
		vertical-align: middle;

		div { 
			height: 220px;
			background-repeat: no-repeat;
			background-position: center center;
		}

		.first {
			background-image: url('../images/static/etapa-1.png');
		}
		.second {
			background-image: url('../images/static/etapa-2.png');
		}
		.third {
			background-image: url('../images/static/etapa-3.png');
		}

		img { max-width: 50%; }
	}
}

#video {

	.pixie { 
		padding: 4.02% 0;
		display: block;
		width: 21%;

		img { 
			max-width: 100%;
			-webkit-filter: blur(10px);
			filter: blur(50px);
		}
	}

	.text {

		h1 {
			font-size: 3.75em;
			width: 100%;
			height: 400px;
			position: absolute;
			top: 0;
			bottom: 0;
		}
	}
}

#comece-a-ler {
	background-color: $green;
	background-image: url('../images/static/bg-mosaic.png');
	background-position: left center;
	background-repeat: no-repeat;
	background-size: contain;

	.wrapper {
		width: 49.7%;
		margin-top: 5%;

		img { max-width: 100%; }

		.text {
			width: 52.6%;
			margin-top: 11%;
			color: $white;

			h1 {
				color: $blue;
			}

			p {
				font-size: 1em;
			}

			.compre {
				width: 100%;
				padding: 10% 0;
				border: 3px solid $white;
				border-radius: 30px 30px 0 30px;
			}

			a { 
				display: inline-block;
				margin-top: 50px;
				img { 
					max-width: 100%;
				}
			}

			.appstore {
				width: 53%;
			}

			.google-play {
				width: 44%;
			}
			

		}
	}
}

footer {
	background-color: #333333;
	padding: 1% 3.8%;
	color: $white;
	line-height: 1.74;
	position: absolute;
	width: 100%;
	bottom: 0;

	address {
		font-style: inherit;
		clear: right;

		a {
			color: $white;
			text-decoration: none;
		}

	}
	.right { clear: right; }
}

@media only screen and (max-width : 1440px){
	#comece-a-ler {

		.wrapper {
			width: 65%;
			margin-top: 5%;

			img { max-width: 100%; }
		}
	}
}

@media only screen and (max-width : 1366px) {
	body {
		font-size: .8em;
	}

	.pad { padding-top: 5.3%; }

	#era-uma-vez  {
		.pixie { 
			width: 16%;
			padding: 8.02% 0 3.02%; 
		}

		.text {
			width: 72%;
		}
	}

	#proposta {
		
		.wrapper {		

			.text { 
				padding-top: 12%;
				margin-left: 0;
			}
		}
	}

	#descubra {
		background-color: $yellow;

		.wrapper {

			.text {
				padding-top: 12%;
				color: $white;
				margin-right: 14%;

				h1 { font-size: 19px; }
			}
		}


		.slider {
			margin-right: 14%;
			position: relative;

			.ar-l {
				background-position: -210px -981px;
				left: -14%;
			}
			.ar-r {
				background-position: -254px -981px;
				right: -15%;
			}
			.slider-wrapper {
				width: 100%;
			}
		}

		.pixies { margin-top: 2%; }
	}

	#etapas.pad { padding-top: 2.5%; }
	#etapas {
	background-color: $red;
	text-align: center;
	height: 60%;

		.text {
			line-height: 1;

			p {
				line-height: 1.5;
				margin: 10px 0 0;
			}
		}
	}

	#video {

		.text {

			h1 {
				font-size: 3em;
			}
		}
	}

	#comece-a-ler {

		.wrapper {
			width: 49.7%;
			margin-top: 5%;

			img { max-width: 41%; }

			.text {
				width: 52.6%;
				margin-top: 11%;
				color: $white;

				h1 {
					color: $blue;
				}

				p {
					font-size: .8em; 
				}

				.compre {
					width: 100%;
					padding: 6% 0;
					border: 3px solid #fff;
					border-radius: 30px 30px 0 30px;
				}

				a { 
					display: inline-block;
					margin-top: 30px;
				}
			}
		}
	}
}

